# stupid-bot-discord

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.py  main.py  pyproject.toml  requirements  resources.py  runstupidbot.bat  runstupidbot.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: __init__.py  birthday.py  birthday_models.py  blocking.py  blocking_models.py  exceptions.py  guild_monitoring.py  music.py  reporting.py  wolfram.py
api/music/: __init__.py  errors.py  healer.py  models.py  player.py  protocols.py  queue.py  service.py  session_events.py
api/music/service/: __init__.py  connection_manager.py  core_service.py  event_handlers.py  state_manager.py  ui_orchestrator.py
cogs/: admin_cog.py  birthday_cog.py  guild_monitor_cog.py  music_cog.py  on_message_cog.py  question_cog.py  report_cog.py  wolfram_cog.py
cogs/command/: no_prefix_cog.py  prefix_suggestions.py
cogs/music/: music_cog.py  responder.py  ui.py  views.py
di/: __init__.py  container.py  diagnostics.py
events/: __init__.py  base_event.py  event_bus.py
framework/: __init__.py  base_cog.py  bot.py  checks.py  cog_loader.py  decorators.py  error_handler.py  exceptions.py  feedback_ui.py  pagination.py  uptime_manager.py
repositories/: __init__.py  base_repository.py  birthday_repository.py  blocking_codec.py  blocking_repository.py  json_object_store.py  unit_of_work.py  volume_repository.py
tests/: conftest.py
tests/api/: test_birthday.py  test_birthday_models.py  test_blocking.py  test_blocking_models.py  test_guild_monitoring.py  test_reporting.py  test_wolfram.py
tests/api/music/: helpers.py  test_errors.py  test_healer.py  test_models.py  test_player.py  test_queue.py  test_session_events.py
tests/api/music/service/: test_connection_manager.py  test_core_service.py  test_event_handlers.py  test_state_manager.py
tests/cogs/: test_wolfram_cog.py
tests/cogs/command/: test_prefix_suggestions.py
tests/cogs/music/: test_music_cog_availability.py  test_music_cog_play.py  test_responder.py  test_views.py
tests/di/: test_container.py
tests/fixtures/wolfram/: minimal_plot.xml
tests/framework/: test_feedback_ui.py  test_pagination.py
tests/integration/: test_wolfram_live.py
tests/repositories/: fakes.py  test_birthday_repository.py  test_blocking_codec.py  test_blocking_repository.py  test_fakes.py  test_volume_repository.py
tests/utils/: test_birthday_utils.py  test_embeds.py  test_image_utils.py  test_json_store.py  test_json_utils.py  test_text_utils.py
utils/: __init__.py  async_json_utils.py  base_cog.py  birthday_manager.py  birthday_utils.py  block_manager.py  callables.py  embeds.py  exceptions.py  failure_ui.py  image_utils.py  json_store.py  json_types.py  json_utils.py  logging_setup.py  report_manager.py  russian_time_utils.py  text_utils.py
utils/discord/: base_cog.py  decorators.py  feedback_ui.py
utils/legacy/: async_json_utils.py
