[project]
name = "stupid-bot-discord"
version = "2.2.0"
description = "A feature-rich Discord bot built with discord.py"
authors = [
    { name = "ArtiArtem", email = "ArtiArtem8@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "defusedxml>=0.7.1",
    "discord-py[voice]>=2.5.2",
    "lavaplay.py>=1.0.15a0",
    "pillow==11.2.1",
    "PyNaCl>=1.5.0",
    "python-dotenv>=1.1.0",
    "rapidfuzz>=3.14.1",
    "requests>=2.32.3",
]

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = [
    "F",   # Pyflakes
    "E",   # Pycodestyle errors
    "W",   # Pycodestyle warnings
    "I",   # Isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "D",   # pydocstyle
    "S",   # flake8-bandit
    "RUF", # Ruff-specific rules
]
lint.ignore = [
    "D100",
    "D101",
    "D102",
    "D104",
    "D107",
    "D205",
    "D401",
    "C901",
    "RUF001",
]
exclude = [
    ".venv",
    "venv",
    "temp",
    "backups",
    "data",
    "**/__pycache__",
    "**/.mypy_cache",
    "**/.pytest_cache",
]

[tool.ruff.isort]
known-first-party = ["cogs", "utils"]

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.per-file-ignores]
"main.py" = ["E402"] # Module level import not at top of file


[tool.mypy]
exclude = "^(\\.venv|venv|temp|backups|data)(/|$)"
python_version = "3.12"
warn_unused_configs = true
show_error_codes = true
ignore_missing_imports = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true

[dependency-groups]
dev = ["monkeytype>=23.3.0", "mypy>=1.15.0"]
