[project]
name = "stupid-bot-discord"
version = "2.3.1"
description = "A feature-rich Discord bot built with discord.py"
authors = [
    { name = "ArtiArtem", email = "ArtiArtem8@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "defusedxml>=0.7.1",
    "discord-py[voice]>=2.5.2",
    "mafic>=2.10.1",
    "pillow>=12",
    "python-dotenv>=1.1.0",
    "rapidfuzz>=3.14.1",
    "requests>=2.32.3",
]

[tool.setuptools]
packages = ["api", "cogs", "di", "events", "framework", "repositories", "utils"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".venv",
    "venv",
    "temp",
    "backups",
    "data",
    "**/__pycache__",
    "**/.mypy_cache",
    "**/.pytest_cache",
]


[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # Pycodestyle errors
    "W",   # Pycodestyle warnings
    "I",   # Isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "D",   # pydocstyle
    "S",   # flake8-bandit
    "RUF", # Ruff-specific rules
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D104",
    "D107",
    "D205",
    "D203",
    "D213",
    "D401",
    "C901",
    "RUF001",
]

[tool.ruff.lint.isort]
known-first-party = ["cogs", "utils"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore:.*audioop.*:DeprecationWarning:discord.player"]
pythonpath = ["."]

[tool.pyright]
exclude = ["**/Lib/**"]
reportUnannotatedClassAttribute = "none"
reportUnusedCallResult = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportMissingTypeStubs = "none"

[[tool.pyright.executionEnvironments]]
root = "."
reportPrivateUsage = "none"
reportUnusedExpression = "none"
reportUnknownArgumentType = "none"
reportMissingParameterType = "none"

[dependency-groups]
dev = ["monkeytype>=23.3.0", "pytest>=9.0.2", "ruff>=0.14.6"]
