[project]
name = "stupid-bot-discord"
version = "2.3.3"
description = "A feature-rich Discord bot built with discord.py"
authors = [
    { name = "ArtiArtem", email = "ArtiArtem8@users.noreply.github.com" },
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "defusedxml>=0.7.1",
    "discord-py[voice]>=2.7.1",
    "mafic>=2.11.0",
    "pillow>=12.3.0",
    "python-dotenv>=1.1.0",
    "rapidfuzz>=3.14.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.57",
]

[tool.setuptools]
packages = ["api", "cogs", "di", "events", "framework", "repositories", "utils"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".venv",
    "venv",
    "temp",
    "backups",
    "data",
    "**/__pycache__",
    "**/.mypy_cache",
    "**/.pytest_cache",
]


[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # Pycodestyle errors
    "W",   # Pycodestyle warnings
    "I",   # Isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "D",   # pydocstyle
    "S",   # flake8-bandit
    "RUF", # Ruff-specific rules
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D104",
    "D107",
    "D203",
    "D205",
    "D213",
    "D401",
    "RUF001",
    "S101",
]

[tool.ruff.lint.mccabe]
max-complexity = 9

[tool.ruff.lint.isort]
known-first-party = ["cogs", "utils"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore:.*audioop.*:DeprecationWarning:discord.player"]
pythonpath = ["."]

[tool.basedpyright]
exclude = ["**/.venv/**"]
reportUnannotatedClassAttribute = "none"
reportUnusedCallResult = "none"
reportUnknownMemberType = "none"
reportMissingTypeStubs = "none"

[[tool.basedpyright.executionEnvironments]]
root = "tests"
extraPaths = ["."]
reportPrivateUsage = "none"
reportOptionalMemberAccess = "none"
reportUninitializedInstanceVariable = "none"
reportArgumentType = "none"
reportAny = "none"
reportExplicitAny = "none"

[[tool.basedpyright.executionEnvironments]]
root = "."
enableExperimentalFeatures = true
